Add no Javascript message

--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -116,7 +116,8 @@
 
 <body>
     <noscript>
-      Esta página es puramente Client Side Rendering! Sin Javascript, no funciona.
+      <style>p { display: block; font-size: 24px; padding: 64px 16px; position: absolute; text-align: center; width: 100%; }</style>
+      <p>⚠️<br />Esta página es puramente<br />Client Side Rendering!<br /><br />Sin Javascript ☕,<br />no funciona 🙅‍♂️.</p>
     </noscript>
   <main>
     <div id="router"></div>
