--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -8,15 +8,15 @@
   <link rel="preload" href="/main/polyfills.js" as="script">
   <link rel="preload" href="/main/events.js" as="script">
   <link rel="preload" href="/main/Component.js" as="script">
-  <link rel="preload" href="/main/Logo.js" as="script">
+  <link rel="preload" href="/components/Logo.js" as="script">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The News es un periódico digital del futuro. Serio y respetable" />
   
   <script>
-    CSS.paintWorklet.addModule('/paint-modules.js');
+    CSS.paintWorklet.addModule('/workers/paint-modules.js');
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js');
+      navigator.serviceWorker.register('/workers/sw.js');
     })
   </script>
 
