Add workers as well

--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   
   <script type='module' src="/main/app.js"></script>
-  <link rel="preload" href="/main/app.js" as="script">
-  <link rel="preload" href="/main/polyfills.js" as="script">
-  <link rel="preload" href="/main/events.js" as="script">
-  <link rel="preload" href="/main/Component.js" as="script">
-  <link rel="preload" href="/components/Logo.js" as="script">
+  <link rel="preload" href="/main/app.js" as="script" crossorigin>
+  <link rel="preload" href="/main/polyfills.js" as="script" crossorigin>
+  <link rel="preload" href="/main/events.js" as="script" crossorigin>
+  <link rel="preload" href="/main/Component.js" as="script" crossorigin>
+  <link rel="preload" href="/components/Logo.js" as="script" crossorigin>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The News es un periódico digital del futuro. Serio y respetable" />
