--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -73,9 +73,9 @@
       -moz-osx-font-smoothing: grayscale;
       -webkit-font-smoothing: antialiased;
 
-      box-shadow: 0 10px 25px 0 rgba(0,0,0,.08);
+      box-shadow: 0 10px 25px 0 #00000033;
       color: #000;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: system-ui;
       font-size: 16px;
       overflow-x: hidden;
 
