--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="UTF-8">
   
+  <!-- Script para crear imports mapeados -->
+  <script type="importmap">
+    {
+      "imports": {
+        "Link": [
+          "/components/Link.js"
+        ],
+        "Component": [
+          "/main/Component.js"
+        ]
+      }
+    }
+  </script>
+
   <script type='module' src="/main/app.js"></script>
+
   <link rel="preload" href="/main/app.js" as="script" crossorigin>
   <link rel="preload" href="/main/polyfills.js" as="script" crossorigin>
   <link rel="preload" href="/main/events.js" as="script" crossorigin>
