Use new import map

--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -10,7 +10,7 @@
         "Link": [
           "/components/Link.js"
         ],
-        "Component": [
+        "miduReact": [
           "/main/Component.js"
         ]
       }
