Add empty importmap

--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -7,6 +7,13 @@
   <script type="importmap">
     {
       "imports": {
+      }
+    }
+  </script>
+
+  <!-- <script type="importmap">
+    {
+      "imports": {
         "Link": [
           "/components/Link.js"
         ],
@@ -15,9 +22,11 @@
         ]
       }
     }
-  </script>
+  </script> -->
 
   <script type='module' src="/main/app.js"></script>
+
+  <!-- <script type='module' src="/main/app.js"></script> -->
 
   <link rel="preload" href="/main/app.js" as="script" crossorigin>
   <link rel="preload" href="/main/polyfills.js" as="script" crossorigin>
@@ -49,13 +58,6 @@
   <meta name="theme-color" content="#09f">
 
   <title>The News</title>
-
-
-
-
-
-
-
 
 
 
