Use importmap for miduReact

--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -7,16 +7,18 @@
   <script type="importmap">
     {
       "imports": {
+        "miduReact": [
+          "/main/Component.js"
+        ]
       }
     }
   </script>
 
+
+  
   <!-- <script type="importmap">
     {
       "imports": {
-        "Link": [
-          "/components/Link.js"
-        ],
         "miduReact": [
           "/main/Component.js"
         ]
