--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -35,7 +35,7 @@
 
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/workers/sw.js');
+        navigator.serviceWorker.register('/sw.js');
       })
     }
   </script>
