--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -19,11 +19,11 @@
 
   <!-- <script type='module' src="/main/app.js"></script> -->
 
-  <link rel="preload" href="/main/app.js" as="script" crossorigin>
-  <link rel="preload" href="/main/polyfills.js" as="script" crossorigin>
-  <link rel="preload" href="/main/events.js" as="script" crossorigin>
-  <link rel="preload" href="/main/Component.js" as="script" crossorigin>
-  <link rel="preload" href="/components/Logo.js" as="script" crossorigin>
+  <link rel="modulepreload" href="/main/app.js" as="script">
+  <link rel="modulepreload" href="/main/polyfills.js" as="script">
+  <link rel="modulepreload" href="/main/events.js" as="script">
+  <link rel="modulepreload" href="/main/Component.js" as="script">
+  <link rel="modulepreload" href="/components/Logo.js" as="script">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The News es un periódico digital del futuro. Serio y respetable" />
