Better class name

--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -96,7 +96,7 @@
       width: 100%;
     }
 
-    body.is-black {
+    body.is-dark {
       --bkg: #000;
       --text: #fff;
       --text-contrast: #000;
