Latest commits to jsDayCanarias

--- a/packages/app/src/index.html
+++ b/packages/app/src/index.html
@@ -15,6 +15,28 @@
     }
   </script> -->
 
+  <script type="importmap">
+    {
+      "imports": {
+        "miduReact": [
+          "/main/Component.js"
+        ]
+      }
+    }
+  </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
   <link rel="modulepreload" href="/main/app.js" as="script">
   <link rel="modulepreload" href="/main/polyfills.js" as="script">
   <link rel="modulepreload" href="/main/Component.js" as="script">
